# cython_cuda

./: .gitignore  CMakeLists.txt  README.md
cmake/: UseCython.cmake
src/: compute.cu  jacobi.cu  test.cxx  wrapper.hpp  wrapper.pyx
tests/: print_devices.py  w_calc_cuda.py
